--- a/app/src/main/res/layout/recipe_item.xml
+++ b/app/src/main/res/layout/recipe_item.xml
@@ -12,10 +12,10 @@
         android:layout_height="120dp">
 
         <ImageView
-            android:contentDescription="@string/recipe_thumbnail_description"
             android:id="@+id/iv_recipe_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:contentDescription="@string/recipe_thumbnail_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,6 @@
             android:layout_marginVertical="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="30dp"
-            android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,10 +38,8 @@
                 android:id="@+id/tv_recipe_name"
                 style="@style/TextAppearance.MaterialComponents.Headline5"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:ellipsize="end"
-                android:gravity="center"
-                android:maxLines="1"
                 android:textSize="24sp"
                 tools:text="Recipe Name" />
         </LinearLayout>
