--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,10 +19,15 @@
         android:id="@+id/detailFragment"
         android:name="com.clarkelamothe.recetapp.detail.presentation.DetailFragment"
         android:label="fragment_detail"
-        tools:layout="@layout/fragment_detail" >
+        tools:layout="@layout/fragment_detail">
         <action
             android:id="@+id/action_detailFragment_to_locationFragment"
             app:destination="@id/locationFragment" />
+        <argument
+            android:name="recipeDetail"
+            android:defaultValue="@null"
+            app:argType="com.clarkelamothe.recetapp.recipe.domain.model.Recipe"
+            app:nullable="true" />
     </fragment>
     <fragment
         android:id="@+id/locationFragment"
