--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="16dp"
     android:background="#ECECEC"
     tools:context=".recipe.presentation.RecipeFragment">
 
@@ -13,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:background="@color/white"
+        android:elevation="8dp"
         app:layout_constraintEnd_toEndOf="@id/rv_recipes"
         app:layout_constraintStart_toStartOf="@id/rv_recipes"
         app:layout_constraintTop_toTopOf="parent" />
