--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -82,14 +82,16 @@
             app:layout_constraintTop_toBottomOf="@id/tv_recipe_description" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_ingredients"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            android:layout_marginTop="8dp"
+            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/tv_recipe_ingredients_header"
             app:layout_constraintStart_toStartOf="@id/tv_recipe_ingredients_header"
             app:layout_constraintTop_toBottomOf="@id/tv_recipe_ingredients_header"
-            app:spanCount="4"
+            app:spanCount="3"
             tools:itemCount="20"
             tools:listitem="@layout/ingredient_item" />
 
