fix in detail ui

--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,15 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:cardCornerRadius="8dp">
+    app:cardCornerRadius="8dp"
+    tools:context=".detail.presentation.DetailFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="16dp"
-        android:background="#ECECEC"
-        tools:context=".detail.presentation.DetailFragment">
+        android:layout_marginTop="16dp"
+        android:background="#ECECEC">
 
         <ImageView
             android:id="@+id/iv_recipe_detail"
@@ -91,7 +91,7 @@
             app:layout_constraintEnd_toEndOf="@id/tv_recipe_ingredients_header"
             app:layout_constraintStart_toStartOf="@id/tv_recipe_ingredients_header"
             app:layout_constraintTop_toBottomOf="@id/tv_recipe_ingredients_header"
-            app:spanCount="3"
+            app:spanCount="2"
             tools:itemCount="20"
             tools:listitem="@layout/ingredient_item" />
 
