--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -8,7 +8,7 @@
     android:background="#ECECEC"
     tools:context=".recipe.presentation.RecipeFragment">
 
-    <SearchView
+    <androidx.appcompat.widget.SearchView
         android:id="@+id/sv_search_recipe"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -17,7 +17,8 @@
         android:elevation="8dp"
         app:layout_constraintEnd_toEndOf="@id/rv_recipes"
         app:layout_constraintStart_toStartOf="@id/rv_recipes"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:queryHint="@string/search_by_name_or_ingredients" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_recipes"
