--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/recipeFragment"
-        android:name="com.clarkelamothe.recetapp.recipe.presentation.RecipeFragment"
+        android:name="com.clarkelamothe.recetapp.recipe.presentation.view.RecipeFragment"
         android:label="fragment_recipe"
         tools:layout="@layout/fragment_recipe">
         <action
